<resources>
    <string name="app_name">PRTracker</string>
    <string name="add_new_record">Dodaj nowy rekord</string>
    <string name="exercise_name">Nazwa ćwiczeina</string>
    <string name="weight_kg">Waga (kg)</string>
    <string name="reps">Powtórzenia</string>
    <string name="save">Zapisz</string>
    <string name="delete">Usuń</string>
    <string name="select_date">Wybierz datę</string>
    <string name="sort_records">Sortuj rekordy</string>
    <string name="min_reps">Min. powtórzenia</string>
</resources>